# influencer-match-making

./: .env.deploy.example  .gitignore  README.md  docker-compose.yaml
.github/workflows/: deploy.yml  destroy.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  embeddings.py  main.py
backend/app/agent/: context.py  graph.py  state.py
backend/app/agent/guardrails/: competitor_check.py  outreach.rail
backend/app/agent/nodes/: auditor.py  guardrail_validator.py  human_review.py  researcher.py  writer.py
backend/app/agent/tools/: __init__.py  moderation.py  vector_search.py
backend/app/api/: campaigns.py
backend/app/core/: errors.py  logging.py
backend/app/observability/: __init__.py  langchain_callbacks.py  langsmith_env.py  llm_pricing.py
backend/app/schemas/: __init__.py  agent.py  campaign.py
backend/scripts/: seed_pinecone.py
backend/tests/: conftest.py  test_graph.py  test_guardrails_unit.py  test_moderation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: use-is-mobile.ts  useAgentStream.ts
frontend/src/lib/: agent-progress.ts  api-base.ts  avatar-url.ts  campaign-storage.ts  campaigns-api.ts  infer-platforms.ts  outreach.ts  safety-status.ts
frontend/src/pages/: CampaignsPage.tsx  CreatorDatabasePage.tsx  DashboardPage.tsx  SettingsPage.tsx
infra/: README.md
infra/bootstrap/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: deploy.sh  destroy.sh
(+36 files in other folders)
