[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influencer-matchmaking-api"
version = "0.1.0"
description = "Influencer matchmaking engine — FastAPI + LangGraph + Pinecone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]==0.32.1",
    "langgraph==1.1.9",
    "langgraph-checkpoint-postgres==2.0.25",
    "langgraph-checkpoint==2.1.2",
    "psycopg[binary,pool]==3.3.3",
    "langchain-core==1.3.0",
    "langchain-openai==1.1.16",
    "langchain-pinecone==0.2.13",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "openai==2.32.0",
    "tenacity==9.1.4",
    "guardrails-ai==0.10.0",
    "langsmith==0.7.33",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
